--- a/package.json
+++ b/package.json
@@ -1,33 +1,31 @@
 {
-  "name": "TouchstoneSkool",
+  "name": "portfolioApp",
   "version": "1.0.0",
-  "description": "A portfolio that is interactive",
   "main": "index.js",
-  "author": "Awemu Christian Ndifor",
   "license": "MIT",
   "scripts": {
-    "development": "nodemon",
-    "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
-    "start": "NODE_ENV=production node ./dist/server.generated.js"
+    "development":"nodemon",
+    "build":"webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
+    "start":"NODE_ENV=production node ./dist/server.generated.js"
   },
   "dependencies": {
-    "@hot-loader/react-dom": "16.13.0",
-    "express": "4.17.1",
-    "mongodb": "3.5.5",
+    "@hot-loader/react-dom": "17.0.0-rc.2",
+    "express":"4.17.1",
+    "mongodb": "3.6.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-hot-loader": "4.12.20"
+    "react-dom":"16.3.1",
+    "react-hot-loader": "4.13.0"
   },
   "devDependencies": {
-    "@babel/core": "7.9.0",
-    "@babel/preset-env": "7.9.0",
-    "@babel/preset-react": "7.9.4",
+    "@babel/core":"7.11.6",
+    "@babel/preset-env": "7.11.5",
+    "@babel/preset-react": "7.10.4",
     "babel-loader": "8.1.0",
-    "nodemon": "2.0.2",
-    "webpack": "4.42.1",
-    "webpack-cli": "3.3.11",
+    "nodemon": "2.0.4",
+    "webpack": "4.44.2",
+    "webpack-cli": "3.3.12",
     "webpack-dev-middleware": "3.7.2",
     "webpack-hot-middleware": "2.25.0",
-    "webpack-node-externals": "1.7.2"
+    "webpack-node-externals": "2.5.2"
   }
 }
